# Encampus

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  Show create commands for db.txt  build.rs  leptosfmt.toml  rust-toolchain.toml  tailwind.config.js
deployment/: check_deploy.sh  clean_deploy.sh  re-start_deploy.sh
src/: app.rs  database_functions.rs  lib.rs  main.rs  svg.rs
src/components/: alerts.rs  class_card.rs  class_tile.rs  create_post.rs  focused_post.rs  header.rs  mod.rs  page.rs  question_modal.rs  question_tile.rs  replies.rs
src/data/: generate_graphs.rs  global_state.rs  mod.rs
src/data/database/: ai_functions.rs  announcement_functions.rs  class_functions.rs  database_functions.rs  db_notifications.rs  filter_functions.rs  live_poll_functions.rs  mod.rs  post_functions.rs  reply_functions.rs  security_functions.rs  user_functions.rs
src/pages/: about_us.rs  class.rs  classes.rs  db_server_fn_example_page.rs  home.rs  live_poll.rs  login_page.rs  mod.rs  register_page.rs  test_page.rs  tutorial.rs
src/pages/about_us_pages/: about_us.rs  gabe.rs  jack.rs  matt.rs  mod.rs  team.rs  tutorial.rs  wensen.rs  wentao.rs
src/pages/admin_pages/: admin_homepage.rs  mod.rs
src/pages/dev_pages/: db_server_fn_example_page.rs  dev.rs  mod.rs
src/pages/global_components/: announcements.rs  create_post.rs  error_template.rs  header.rs  live_poll_sidebar.rs  mod.rs  notification.rs  page.rs  push_notifications.rs  question_tile.rs  rich_text_box.rs  sidebar.rs
src/pages/user_profile/: mod.rs  user_profile_page.rs
src/pages/user_settings/: mod.rs  user_settings_page.rs
src/pages/view_class_posts/: announcement_details.rs  class.rs  class_details.rs  create_post.rs  edit_post.rs  focused_post.rs  mod.rs  question_tile.rs
src/pages/view_enrolled_classes/: classes.rs
src/resources/: mod.rs  tile_design.rs
src/resources/images/svgs/: aligncenter_icon.rs  alignjustify_icon.rs  alignleft_icon.rs  alignright_icon.rs  announcement_bell.rs  announcement_mic.rs  announcement_mic_2.rs  approval_icon.rs  blockquote_icon.rs  bold_icon.rs  bump_icon.rs  cancel_icon.rs  check_icon.rs  class_tile_squiggle.rs  create_post_icon.rs  dashboard_icon.rs  dots_icon.rs  down_arrow.rs  drop_down_bars.rs  drop_down_bars_close.rs  edit_post_icon.rs  encampus_assistant_icon.rs  endorsed_icon.rs  enlargetext_icon.rs  error_icon.rs  filter_icon.rs  graduation_cap_icon.rs  highlighter_icon.rs  home_icon.rs  information_icon.rs  instructor_endorsed_icon.rs  instructor_icon.rs  italic_icon.rs  lock_icon.rs  logout_icon.rs  magnifying_glass.rs  mod.rs  paper_icon.rs  pin_icon.rs  polling_icon.rs  (+12 more)
src/resources/js/: tiptap.js
src/resources/style/: tailwind.css
src/svg/: DropDownBars.rs
src/svgs/: announcement_bell.rs  drop_down_bars.rs  magnifying_glass.rs  mod.rs  text_area_icon.rs
src/util/: mod.rs
style/: testpage.css
